[gd_scene load_steps=8 format=3 uid="uid://btl0otxtx6dxq"]

[ext_resource type="Script" uid="uid://brg25bw7pdidl" path="res://main.gd" id="1_lquwl"]
[ext_resource type="PackedScene" uid="uid://b7xffb245bmgd" path="res://asteroids/asteroid_01.tscn" id="2_1bvp3"]
[ext_resource type="PackedScene" uid="uid://bbmxglrxlytao" path="res://saucer.tscn" id="2_lquwl"]
[ext_resource type="PackedScene" uid="uid://mf25hgivdisq" path="res://asteroids/asteroid_02.tscn" id="3_lquwl"]
[ext_resource type="PackedScene" uid="uid://b738w4s31es1x" path="res://asteroids/asteroid_03.tscn" id="4_lquwl"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_eai3k"]
load_path = "res://.godot/imported/asteroids-2x.png-984d7ca9b5cb30a8f8afd42db53fa89b.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_1bvp3"]
atlas = SubResource("CompressedTexture2D_eai3k")
region = Rect2(192, 256, 96, 64)

[node name="main" type="Node2D"]
script = ExtResource("1_lquwl")

[node name="Saucer" parent="." instance=ExtResource("2_lquwl")]
position = Vector2(-64, 832)

[node name="Asteroids" type="Node2D" parent="."]
position = Vector2(-59, -59)
metadata/_edit_group_ = true

[node name="Asteroid01" parent="Asteroids" instance=ExtResource("2_1bvp3")]

[node name="Asteroid02" parent="Asteroids" instance=ExtResource("3_lquwl")]

[node name="Asteroid03" parent="Asteroids" instance=ExtResource("4_lquwl")]

[node name="Asteroid04" parent="Asteroids" instance=ExtResource("4_lquwl")]

[node name="GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Lives" type="Control" parent="GUI"]
anchors_preset = 0
offset_right = 320.0
offset_bottom = 128.0

[node name="Life1" type="TextureRect" parent="GUI/Lives"]
layout_mode = 0
offset_top = 96.0
offset_right = 96.0
offset_bottom = 160.0
rotation = -1.5707964
texture = SubResource("AtlasTexture_1bvp3")

[node name="Life2" type="TextureRect" parent="GUI/Lives"]
layout_mode = 0
offset_left = 64.0
offset_top = 96.0
offset_right = 160.0
offset_bottom = 160.0
rotation = -1.5707964
texture = SubResource("AtlasTexture_1bvp3")

[node name="Life3" type="TextureRect" parent="GUI/Lives"]
layout_mode = 0
offset_left = 128.0
offset_top = 96.0
offset_right = 224.0
offset_bottom = 160.0
rotation = -1.5707964
texture = SubResource("AtlasTexture_1bvp3")

[node name="RichTextLabel" type="RichTextLabel" parent="GUI"]
layout_mode = 0
offset_left = 896.0
offset_right = 1280.0
offset_bottom = 64.0
theme_override_font_sizes/normal_font_size = 45
text = "Score: 0"

[node name="GameOver" type="Control" parent="GUI"]
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 960.0
metadata/_edit_lock_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="GUI/GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -160.0
offset_right = 640.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 90
text = "Game over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TryAgain" type="Button" parent="GUI/GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_right = 128.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
text = "Try Again
"

[node name="Exit" type="Button" parent="GUI/GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = 128.0
offset_right = 128.0
offset_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit
"

[connection signal="pressed" from="GUI/GameOver/TryAgain" to="." method="_on_try_again_pressed"]
[connection signal="pressed" from="GUI/GameOver/Exit" to="." method="_on_exit_pressed"]
